# craft

./: 19  Cargo.toml  LICENSE  Makefile  README.md  install.sh  main.js  package.json
.github/workflows/: ci.yml  release.yml  release_version.yml
apps/craft/: Cargo.toml
apps/craft/src/: main.rs
crates/actor/: Cargo.toml
crates/actor/src/: add_package_actor.rs  clean_cache_actor.rs  install_actor.rs  lib.rs  remove_package_actor.rs  run_script_actor.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  lib.rs
crates/contract/: Cargo.toml
crates/contract/src/: actor.rs  constants.rs  errors.rs  lib.rs  pipeline.rs
crates/debug/: Cargo.toml
crates/debug/src/: debug.rs  lib.rs
crates/lockfile/: Cargo.toml
crates/lockfile/src/: lib.rs  lockfile.rs  package_entry.rs
crates/manager/: Cargo.toml
crates/manager/src/: lib.rs  manager.rs
crates/network/: Cargo.toml
crates/network/src/: network.rs
crates/package/: Cargo.toml
crates/package/src/: install_package.rs  lib.rs  npm.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: lib.rs
crates/pipeline/src/pipes/: install_pipe.rs  linker_pipe.rs  lockfile_generator_pipe.rs  mod.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs  process.rs
crates/progress/: Cargo.toml
crates/progress/src/: lib.rs  progress.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: dependency.rs  download_artifact.rs  git.rs  lib.rs  npm.rs  resolved_artifact.rs  resolver.rs
crates/tarball/: Cargo.toml
crates/tarball/src/: gzip.rs  lib.rs
