[workspace]
members = [
  "apps/craft",
  "crates/manager",
  "crates/package",
  "crates/actor",
  "crates/progress",
  "crates/cli",
  "crates/resolver",
  "crates/pipeline",
  "crates/contract",
  "crates/debug",
  "crates/network",
  "crates/tarball",
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"
