[package]
name = "craft"
version = "0.1.0"
edition = "2024"

[dependencies]
cli = { path = "../../crates/cli" }
manager = { path = "../../crates/manager" }
contract = { path = "../../crates/contract" }
debug = { path = "../../crates/debug" }

tokio = { version = "1.0", features = ["full"] }

[lints]
workspace = true
