[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
cli = { path = "../cli" }
actor = { path = "../actor" }
package = { path = "../package" }
contract = { path = "../contract" }
debug = { path = "../debug" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }

[lints]
workspace = true
