[package]
name = "network"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
contract = { path = "../contract" }
tokio = { version = "1.0", features = ["fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
