[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
contract = { path = "../contract" }
package = { path = "../package" }
resolver = { path = "../resolver" }
debug = { path = "../debug" }
futures = "0.3"
tokio = { version = "1.48.0", features = ["full"] }
