[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
contract = { path = "../contract" }
package = { path = "../package" }
resolver = { path = "../resolver" }
debug = { path = "../debug" }
tarball = { path = "../tarball" }
lockfile = { path = "../lockfile" }
futures = "0.3"
tokio = { version = "1.48.0", features = ["full"] }
async-recursion = "1.0"
node-semver = "2.0"

[dev-dependencies]
tempfile = "3.10"
