[package]
name = "resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
package = { path = "../package" }
contract = { path = "../contract" }
debug = { path = "../debug" }
network = { path = "../network" }
anyhow = "1.0"

[lints]
workspace = true
