[package]
name = "resolver"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
package = { path = "../package" }
contract = { path = "../contract" }
network = { path = "../network" }
debug = { path = "../debug" }
anyhow = "1.0"

[lints]
workspace = true
